--- a/Editor/src/main/resources/theme/FlatLaf.properties
+++ b/Editor/src/main/resources/theme/FlatLaf.properties
@@ -1,2 +1,12 @@
+# suppress inspection "UnusedProperty" for whole file
 MenuItem.selectionType=underline
 Icon.color=@icon
+
+# text field
+TextFieldUI=fr.poulpogaz.isekai.editor.ui.text.IsekaiTextFieldUI
+
+TextField.background=darken(@textComponentBackground,10%)
+TextField.hoverBackgroundColor=darken(@textComponentBackground,5%)
+TextField.focusBackgroundColor=@textComponentBackground
+
+PathTextField.errorColor=#FF3C3C
