lots of changes.

--- a/IsekaiTI83-84/makefile
+++ b/IsekaiTI83-84/makefile
@@ -1,7 +1,7 @@
 NAME ?= ISEKAI
 ICON ?= icon.png
 DESCRIPTION ?= "Isekai"
-COMPRESSED ?= NO
+COMPRESSED ?= YES
 ARCHIVED ?= YES
 
 CFLAGS ?= -Wall -Wextra -Oz
