--- a/IsekaiTI83-84/src/gfx/convimg.yaml
+++ b/IsekaiTI83-84/src/gfx/convimg.yaml
@@ -3,7 +3,7 @@ palettes:
     images: automatic
     fixed-entries:
       - color: {index: 0, r:   0, g:   0, b:   0} # Black
-      - color: {index: 1, r: 255, g: 255, b: 255} # White 
+      - color: {index: 1, r: 255, g: 255, b: 255} # White
       - color: {index: 2, r: 255, g:   0, b: 255} # Magenta -> transparent color
 
       - color: {index: 3, r:  23, g:   4, b:  50} # AF ->  23,   4,  50
@@ -13,13 +13,18 @@ palettes:
       - color: {index: 7, r:  47, g: 129, b:  54} # 06 ->  47, 129,  54
       - color: {index: 8, r:  73, g: 146, b:  49} # 32 ->  73, 146,  49
       - color: {index: 9, r: 100, g: 164, b:  44} # 28 -> 100, 164,  44
+      - color: {index: 10, r: 224, g: 19, b: 8}   # Red
 
 converts:
   - name: sprites
     palette: palette
+    transparent-color-index: 2
+    style: rlet
     images:
-      - "*"
-converts:
+      - chicken_down.png
+      - chicken_left.png
+      - chicken_up.png
+
   - name: chicken_left_walk
     palette: palette
     tilesets:
@@ -28,12 +33,20 @@ converts:
       images:
         - chicken_left_walk.png
 
+  - name: tileset
+    palette: palette
+    tilesets:
+      tile-width: 16
+      tile-height: 16
+      images:
+        - tileset.png
 
 outputs:
   - type: c
     include-file: gfx.h
-    palettes:
-      - palette
     converts:
       - sprites
       - chicken_left_walk
+      - tileset
+    palettes:
+      - palette
