--- a/Editor/pom.xml
+++ b/Editor/pom.xml
@@ -8,6 +8,20 @@
     <groupId>fr.poulpogaz</groupId>
     <version>1.0-SNAPSHOT</version>
 
+    <developers>
+        <developer>
+            <name>PoulpoGaz</name>
+            <url>https://github.com/PoulpoGaz/</url>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://mit-license.org/</url>
+        </license>
+    </licenses>
+
     <build>
         <plugins>
             <plugin>
