--- a/Editor/pom.xml
+++ b/Editor/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>isekai-editor</artifactId>
     <groupId>fr.poulpogaz</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <developers>
         <developer>
