--- a/Editor/src/main/resources/themes/FlatLaf.properties
+++ b/Editor/src/main/resources/themes/FlatLaf.properties
@@ -1,4 +1,4 @@
 # suppress inspection "UnusedProperty" for whole file
 MenuItem.selectionType=underline
 Icon.color=@icon
-Text.disabled=@disabledText
+Text.disabled=@disabledForeground
