--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
         </dependency>
 
         <dependency>
+            <groupId>io.github.poulpogaz</groupId>
+            <artifactId>json</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.joml</groupId>
             <artifactId>joml</artifactId>
             <version>${joml.version}</version>
